--- a/css/styles.scss
+++ b/css/styles.scss
@@ -15,7 +15,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-size: 15px;
   background-color: $veryLightGrayishBlue;
-  background-image: url("../images/bg-top.svg");
-  background-repeat: no-repeat;
-  background-position: top right;
+  background-image: url("../images/bg-top.svg"), url("../images/bg-bottom.svg");
+  background-repeat: no-repeat, no-repeat;
+  background-position: top right, left bottom;
 }
