Added dynmic data

--- a/css/_cards.scss
+++ b/css/_cards.scss
@@ -30,7 +30,7 @@
         margin-right: 0.5rem;
         color: $darkGrayishBlue;
       }
-      .price {
+      .price1 {
         font-size: 3.6rem;
         color: $darkGrayishBlue;
       }
@@ -88,7 +88,7 @@
         margin-right: 0.5rem;
       }
 
-      .price {
+      .price2 {
         font-size: 3.6rem;
       }
     }
@@ -146,7 +146,7 @@
         color: $darkGrayishBlue;
       }
 
-      .price {
+      .price3 {
         font-size: 3.6rem;
         color: $darkGrayishBlue;
       }
